--- a/nest/models/model_cards/eeg_things_eeg_2_vit_b_32.yaml
+++ b/nest/models/model_cards/eeg_things_eeg_2_vit_b_32.yaml
@@ -3,7 +3,7 @@ modality: eeg
 dataset: things_eeg_2
 features: vision transformer (ViT-B/32)
 repeats: multi
-subject_level: true
+subject_specific: true
 
 # General description of the model
 description: |
