--- a/nest/models/model_cards/template.yaml
+++ b/nest/models/model_cards/template.yaml
@@ -2,80 +2,79 @@
 # Replace placeholder values with actual model information
 
 # Basic metadata
-model_id: [modality]_[dataset]_[model_type]  # e.g., fmri_nsd_fwrf
-modality: [modality]  # e.g., fmri, eeg, meg, ecog
-dataset: [dataset_name]
-features: [feature_extraction_method]
-repeats: [single/multi]  # whether model generates single or multiple repetitions
-subject_level: [true/false]  # whether model is subject-specific
+model_id: modality_dataset_model_type  # e.g., fmri_nsd_fwrf
+modality: modality  # e.g., fmri, eeg, meg, ...
+dataset: dataset_name
+features: feature_extraction_method
+repeats: single/multi  # whether model generates single or multiple repetitions
+subject_specific: true/false  # whether model is subject-specific
 
 # General description of the model
 description: |
-  [Provide a concise but informative description of the model, including:
+  Provide a concise but informative description of the model, including:
    - What kind of neural responses it generates
    - What dataset it was trained on
    - The basic approach/architecture
    - Any notable characteristics or limitations
-   Keep this to 3-5 sentences for readability.]
+   Keep this to 3-5 sentences for readability.
 
 # Input stimulus information
 input:
   type: "numpy.ndarray"  # or other appropriate type
   shape: [shape_description]  # e.g., [batch_size, 3, height, width]
-  description: "[Brief description of input format]"
+  description: "Brief description of input format"
   constraints:
-    - "[List any constraints on input values]"
-    - "[e.g., value ranges, size requirements, etc.]"
+    - "List any constraints on input values"
+    - "e.g., value ranges, size requirements, etc."
 
 # Output information
 output:
   type: "numpy.ndarray"  # or other appropriate type
   shape: [shape_description]  # e.g., [batch_size, n_voxels]
-  description: "[Brief description of output format]"
+  description: "Brief description of output format"
   dimensions:
-    - name: "[dimension_name]"
-      description: "[What this dimension represents]"
-    - name: "[dimension_name]"
-      description: "[What this dimension represents]"
+    - name: "dimension_name]"
+      description: "What this dimension represents"
+    - name: "dimension_name"
+      description: "What this dimension represents"
     # Add more dimensions as needed
 
 # Model parameters and their usage
 parameters:
   # First parameter (typically subject)
-  [param_name]:
-    type: [param_type]  # e.g., int, str, float
-    required: [true/false]
-    valid_values: [list_of_valid_values]  # or range, or omit if not applicable
-    default: [default_value]  # include if there's a default value
-    example: [example_value]
-    description: "[Description of what this parameter represents]"
-    function: "[Which function uses this parameter: get_encoding_model, load_model, generate_response, etc.]"
+  param_name:
+    type: param_type  # e.g., int, str, float
+    required: true/false
+    valid_values: list_of_valid_values  # or range, or omit if not applicable
+    default: default_value  # include if there's a default value
+    example: example_value
+    description: "Description of what this parameter represents"
+    function: "Which function uses this parameter: get_encoding_model, load_model, .."
   
   # Add more parameters as needed
-  [param_name]:
-    type: [param_type]
-    required: [true/false]
-    valid_values: [list_of_valid_values]  # or range, or omit if not applicable
-    default: [default_value]  # include if there's a default value
-    example: [example_value]
-    description: "[Description of what this parameter represents]"
-    function: "[Which function uses this parameter]"
+  param_name:
+    type: param_type
+    required: true/false
+    valid_values: list_of_valid_values  # or range, or omit if not applicable
+    default: default_value  # include if there's a default value
+    example: example_value
+    description: "Description of what this parameter represents"
+    function: "Which function uses this parameter"
 
-# Performance metrics and references
+# Performance metrics (if needed) and references
 performance:
   metrics:
-    - name: "[metric_name]"
-      value: "[metric_value]"
-      description: "[What this metric represents]"
+    - name: "metric_name"
+      value: "metric_value"
+      description: "What this metric represents"
     
     # Add more metrics as needed
-    - name: "[metric_name]"
-      value: "[metric_value]"
-      description: "[What this metric represents]"
+    - name: "metric_name"
+      value: "metric_value"
+      description: "What this metric represents"
   
-  plots: "[URL_to_performance_plots]"  # URL or path to visualizations
-  
-  references:
-    - "[Full citation for related paper]"
-    - "[Full citation for related paper]"
-    # Add more references as needed
+  plots: "URL_to_performance_plots"  # URL or path to visualizations
+
+# Add References here
+references:
+    - "Citation for your model or dataset"
