--- a/.githubs/workflows/test_models.yml
+++ b/.githubs/workflows/test_models.yml
@@ -7,6 +7,7 @@ on:
     branches: [ main, development ]
   pull_request:
     branches: [ main, development ]
+  workflow_dispatch:
 
 jobs:
   test-nest-models:
