--- a/nest/models/model_cards/eeg_things_eeg_2_vit_b_32.yaml
+++ b/nest/models/model_cards/eeg_things_eeg_2_vit_b_32.yaml
@@ -1,9 +1,8 @@
 model_id: eeg_things_eeg_2_vit_b_32
 modality: eeg
-dataset: things_eeg_2
-features: vision transformer (ViT-B/32)
-repeats: multi
-subject_specific: true
+training_dataset:  things_eeg_2
+model_architecture: vision transformer (ViT-B/32)
+creator: Alessandro Gifford
 
 # General description of the model
 description: |
@@ -36,7 +35,7 @@ output:
     - name: "n_repetitions"
       description: "Number of simulated repetitions of the same stimulus (typically 4)"
     - name: "n_channels"
-      description: "Number of EEG channels (typically 64)"
+      description: "Number of EEG channels (typically 63)"
     - name: "n_timepoints"
       description: "Number of time points in the EEG epoch (typically 140)"
 
@@ -45,9 +44,9 @@ parameters:
   subject:
     type: int
     required: true
-    valid_values: [1, 2, 3, 4]
+    valid_values: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
     example: 1
-    description: "Subject ID from the THINGS-EEG-2 dataset (1-4)"
+    description: "Subject ID from the THINGS-EEG-2 dataset (1-10)"
     function: "get_encoding_model"
   
   nest_dir:
