--- a/aws.yaml
+++ b/aws.yaml
@@ -1,7 +1,5 @@
 Name: Neural Encoding Simulation Toolkit (NEST)
-Description: Neural Encoding Simulation Toolkit (NEST) is a resource consisting of of multiple pre-trained encoding 
-models of the brain and an accompanying Python package to generate accurate in silico neural responses to arbitrary 
-stimuli with just a few lines of code.
+Description: "Neural Encoding Simulation Toolkit (NEST) is a resource consisting of multiple pre-trained encoding models of the brain and an accompanying Python package to generate accurate in silico neural responses to arbitrary stimuli with just a few lines of code."
 Documentation: https://neural-encoding-simulation-toolkit.readthedocs.io/en/latest/index.html
 Contact: brain.nest.contact@gmail.com
 ManagedBy: "[Neural Dynamics of Visual Cognition](https://www.ewi-psy.fu-berlin.de/en/psychologie/arbeitsbereiche/neural_dyn_of_vis_cog/index.html), [CVAI](https://www.cvai.cs.uni-frankfurt.de/)"
@@ -16,13 +14,14 @@ Tags:
   - deep learning
   - neuroimaging
   - computer vision
-License: https://neural-encoding-simulation-toolkit.readthedocs.io/en/latest/about/terms_and_conditions.html  # Anything else?
+License: CC BY-NC 4.0. For full license details, see https://neural-encoding-simulation-toolkit.readthedocs.io/en/latest/about/terms_and_conditions.html
 Citation: Please cite the Neural Encoding Simulation Toolkit using the format provided here https://neural-encoding-simulation-toolkit.readthedocs.io/en/latest/about/citation.html
 Resources:
- - Description: Pre-trained neural encoding models
-   ARN: arn:aws:s3:::nest-models # Placeholder
-   Region: us-east-1 # Placeholder
-   Type: S3 Bucket
+  - Description: Pre-trained neural encoding models
+    ARN: arn:aws:s3:::nest-models # Placeholder
+    Region: us-east-1 # Placeholder
+    Type: S3 Bucket
+DataAtWork:
   Tutorials:
     - Title: Quickstart Tutorial
       URL: # ADD
@@ -53,5 +52,5 @@ Resources:
       AuthorName: Alessandro Gifford
       AuthorURL: https://www.alegifford.com/
 ADXCategories:
-- Healthcare & Life Sciences Data
-- Public Sector Data
+  - Healthcare & Life Sciences Data
+  - Public Sector Data
