--- a/nest/models/model_cards/eeg-things_eeg_2-vit_b_32.yaml
+++ b/nest/models/model_cards/eeg-things_eeg_2-vit_b_32.yaml
@@ -1,9 +1,9 @@
 model_id: eeg-things_eeg_2-vit_b_32
 modality: EEG
 training_dataset:  THINGS EEG2
-species: Human # Add this
-stimuli: Images # Add this
-model_type: vision transformer (ViT-B/32) # Model Architecture => Model type
+species: Human
+stimuli: Images
+model_type: vision transformer (ViT-B/32)
 creator: Alessandro Gifford
 
 # General description of the model
@@ -15,7 +15,7 @@ description: |
   The encoding models were trained on THINGS EEG2 (Gifford et al., 2022), 63-channel EEG responses of 10 subjects to
   over 16,740 images from the THINGS initiative (Hebart et al., 2019).
   
-  **Preprocessing. During preprocessing the 63-channel raw EEG data was filtered between 0.03 Hz and 100 Hz; epoched
+  **Preprocessing**. During preprocessing the 63-channel raw EEG data was filtered between 0.03 Hz and 100 Hz; epoched
   from -100 ms to +600 ms with respect to stimulus onset; transformed using current source density transform;
   downsampled to 200 Hz resulting in 140 times points per epoch (one every 5 ms); baseline corrected at each channel
   using the mean of the pre-stimulus interval. Note that, after preprocessing, the THINGS EEG2 data were *z*-scored at
@@ -92,12 +92,12 @@ parameters:
         ]
         example: ["Oz", "Cz", "Fp1"]
       timepoints:
-        type: binary_vector
+        type: numpy.ndarray
         description: |
           Binary one-hot encoded vector indicating which timepoints to include.
           Must have exactly the same length as the number of available timepoints (140).
           Each position set to 1 indicates that timepoint should be included.
-        example: [0, 0, 0, 1, 1, 1, 0, 0]  
+        example: [0, 0, ..., 1, 1, 0]  
 
 
   stimulus:
