--- a/aws.yaml
+++ b/aws.yaml
@@ -23,20 +23,20 @@ Resources:
 DataAtWork:
   Tutorials:
     - Title: Quickstart Tutorial
-      URL: # ADD
-      NotebookURL: https://github.com/gifale95/NEST/blob/development/tutorials/nest_quickstart.ipynb
+      URL: https://colab.research.google.com/drive/1JS4um1eS4Ml983lUNQgEw4544_Lc5Qn0#scrollTo=ObuCJgZsYB-G
+      NotebookURL: https://github.com/gifale95/NEST/blob/main/tutorials/nest_quickstart.ipynb
       AuthorName: Domenic Bersch
       AuthorURL: https://toastydom.github.io/
       Services: Amazon S3
     - Title: In-Silico EEG Data Tutorial
-      URL: # ADD
-      NotebookURL: https://github.com/gifale95/NEST/blob/development/tutorials/nest_eeg_tutorial.ipynb
+      URL: https://colab.research.google.com/drive/1uF5nr1pyg0_my3gULj3w5y0nuq5gZjhL#scrollTo=9IY581JgYIUN
+      NotebookURL: https://github.com/gifale95/NEST/blob/main/tutorials/nest_eeg_tutorial.ipynb
       AuthorName: Alessandro Gifford
       AuthorURL: https://www.alegifford.com/
       Services: Amazon S3
     - Title: In-Silico fMRI Data Tutorial
-      URL: # ADD
-      NotebookURL: https://github.com/gifale95/NEST/blob/development/tutorials/nest_fmri_tutorial.ipynb
+      URL: https://colab.research.google.com/drive/1w4opmM9h8Oe1NWlwIDuLuDIGuIXj9UaV#scrollTo=ObuCJgZsYB-G
+      NotebookURL: https://github.com/gifale95/NEST/blob/main/tutorials/nest_fmri_tutorial.ipynb
       AuthorName: Alessandro Gifford
       AuthorURL: https://www.alegifford.com/
       Services: Amazon S3
