--- a/neural_encoding_simulation_toolkit.yaml
+++ b/neural_encoding_simulation_toolkit.yaml
@@ -28,13 +28,13 @@ DataAtWork:
       AuthorName: Domenic Bersch
       AuthorURL: https://toastydom.github.io/
       Services: Amazon S3
-    - Title: In-Silico EEG Data Tutorial
+    - Title: In Silico EEG Data Tutorial
       URL: https://colab.research.google.com/drive/1uF5nr1pyg0_my3gULj3w5y0nuq5gZjhL#scrollTo=9IY581JgYIUN
       NotebookURL: https://github.com/gifale95/NEST/blob/main/tutorials/nest_eeg_tutorial.ipynb
       AuthorName: Alessandro Gifford
       AuthorURL: https://www.alegifford.com/
       Services: Amazon S3
-    - Title: In-Silico fMRI Data Tutorial
+    - Title: In Silico fMRI Data Tutorial
       URL: https://colab.research.google.com/drive/1w4opmM9h8Oe1NWlwIDuLuDIGuIXj9UaV#scrollTo=ObuCJgZsYB-G
       NotebookURL: https://github.com/gifale95/NEST/blob/main/tutorials/nest_fmri_tutorial.ipynb
       AuthorName: Alessandro Gifford
