--- a/nest/models/model_cards/eeg-things_eeg_2-vit_b_32.yaml
+++ b/nest/models/model_cards/eeg-things_eeg_2-vit_b_32.yaml
@@ -3,7 +3,7 @@ modality: EEG
 training_dataset:  THINGS EEG2
 species: Human
 stimuli: Images
-model_type: vision transformer (ViT-B/32)
+model_type: Vision transformer (ViT-B/32)
 creator: Alessandro Gifford
 
 # General description of the model
@@ -30,7 +30,6 @@ description: |
   generate 4 instances (i.e., repeats) of in silico EEG responses.  Indepedent encoding models were trained for each subject,
   channel, and time point.
 
-
 # Input stimulus information
 input:
   type: "numpy.ndarray"
@@ -40,7 +39,6 @@ input:
     - "Image values should be integers in range [0, 255]."
     - "Image dimensions (height, width) should be equal (square)."
     - "Minimum recommended image size: 224×224 pixels."
-
 
 # Output information
 output:
@@ -72,7 +70,8 @@ parameters:
     type: dict
     description: |
       Specifies which outputs to include in the model responses.
-      Can include specific channels and/or timepoints.
+      Can include specific channels and/or timepoints. If not provided,
+      EEG responses are generated for all EEG channels and time points.
     required: false
     function: get_encoding_model
     properties:
@@ -96,7 +95,6 @@ parameters:
           Must have exactly the same length as the number of available timepoints (140).
           Each position set to 1 indicates that timepoint should be included.
         example: [0, 0, ..., 1, 1, 0]  
-
 
   stimulus:
     type: numpy.ndarray
@@ -130,6 +128,7 @@ performance:
     - "neural-encoding-simulation-toolkit/encoding_models/modality-eeg/train_dataset-things_eeg_2/model-vit_b_32/encoding_models_accuracy"
   
 references:
+    - Model building code: 'https://github.com/gifale95/NEST/tree/main/nest_creation_code'
     - THINGS EEG2 (Gifford et al., 2022): https://doi.org/10.1016/j.neuroimage.2022.119754
     - THINGS initiative (Hebart et al., 2019): https://things-initiative.org/
     - ViT-B/32 (Dosovitskiy et al., 2020): https://arxiv.org/abs/2010.11929
