--- a/neural_encoding_simulation_toolkit.yaml
+++ b/neural_encoding_simulation_toolkit.yaml
@@ -43,7 +43,7 @@ DataAtWork:
         - Amazon S3
   Tools & Applications:
     - Title: Brain Encoding Response Generator (BERG)
-      URL: https://github.com/gifale95/NEST
+      URL: https://github.com/gifale95/BERG
       AuthorName: Alessandro Gifford
       AuthorURL: https://www.alegifford.com/
   Publications:
