--- a/brain_encoding_response_generator.yaml
+++ b/brain_encoding_response_generator.yaml
@@ -16,7 +16,7 @@ License: CC BY-NC 4.0. For Terms & Conditions, see https://brain-encoding-respon
 Citation: Please cite the Brain Encoding Response Generator using the format provided here https://brain-encoding-response-generator.readthedocs.io/en/latest/about/citation.html
 Resources:
   - Description: Pre-trained neural encoding models
-    ARN: arn:aws:account::643690018923:account
+    ARN: arn:aws:s3:::brain-encoding-response-generator
     Region: us-west-2
     Type: S3 Bucket
 DataAtWork:
