--- a/nest/models/model_cards/template.yaml
+++ b/nest/models/model_cards/template.yaml
@@ -1,4 +1,4 @@
-# Template YAML file for NEST model specification
+# Template YAML file for BERG model specification
 # Replace placeholder values with actual model information
 
 # Basic metadata
